--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <!-- Css Styles Link -->
 
-      <link rel="stylesheet" href="css/styles.css">
+      <link rel="stylesheet" href="styles.css">
 
       <!-- Google Fonts Link -->
 
@@ -44,7 +44,7 @@
 
 
       <div class="logo">
-        <img src="images/logo.png" height="160" width="200" alt="image not loaded">
+        <img src="logo.png" height="160" width="200" alt="image not loaded">
       </div>
 
 
@@ -80,7 +80,7 @@
            compassionate Divorce Lawyer or Family Law Attorney with
            a highly regarded and reputable New York Law Firm that will
             explain your legal rights in a easy to understand terms. </h4>
-            <img class="lawyer_img" src="images/lawyer.png" height="175" width="175" alt="Image not loaded">
+            <img class="lawyer_img" src="lawyer.png" height="175" width="175" alt="Image not loaded">
             <h5>George J. Williams</h5>
        </div>
 
